[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
dotenv = "0.15.0"
env_logger = "0.10"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
