[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
serde_json = "1"

[[bin]]
name = "prepare"
path = "src/bin/prepare.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
